--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,22 +1,29 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="navbar-inner">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Sophie's World</a>
-        </div>
-        <div class="collapse navbar-collapse">
+          <a class="btn btn-navbar"data-toggle="collapse" data-target=".nav-collapse">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+          </a> 
+          <%= link_to "Sophie's World", root_path, class: "brand pull-left" %>
+        <div class="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "About", about_path %></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
           <ul class="nav pull-right">
-            <li class="active"><%= link_to "Login", '#' %></li>
+            <% if user_signed_in? %>
+              <li><%= link_to "Edit Profle", edit_user_registration_path %></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Login", new_user_session_path %></li>
+            <% end %>
           </ul>
         </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </div>
+  </div> 
+</div>
